--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,28 @@
 @font-face {
-  font-family: "Quicksand";
+  font-family: 'Quicksand';
   font-style: normal;
   font-weight: 300;
-  src: url("./fonts/Quicksand-Light.ttf"); /* IE9 Compat Modes */
-  src: local("Quicksand"), local("Quicksand"),
-    url("./fonts/Quicksand-Light.ttf") format("truetype");
+  src: url('./fonts/Quicksand-Light.ttf'); /* IE9 Compat Modes */
+  src: local('Quicksand'), local('Quicksand'),
+    url('./fonts/Quicksand-Light.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Quicksand";
+  font-family: 'Quicksand';
   font-style: normal;
   font-weight: 500;
-  src: url("./fonts/Quicksand-Regular.ttf"); /* IE9 Compat Modes */
-  src: local("Quicksand"), local("Quicksand"),
-    url("./fonts/Quicksand-Regular.ttf") format("truetype");
+  src: url('./fonts/Quicksand-Regular.ttf'); /* IE9 Compat Modes */
+  src: local('Quicksand'), local('Quicksand'),
+    url('./fonts/Quicksand-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Quicksand";
+  font-family: 'Quicksand';
   font-style: normal;
   font-weight: 700;
-  src: url("./fonts/Quicksand-Bold.ttf"); /* IE9 Compat Modes */
-  src: local("Quicksand"), local("Quicksand"),
-    url("./fonts/Quicksand-Bold.ttf") format("truetype");
+  src: url('./fonts/Quicksand-Bold.ttf'); /* IE9 Compat Modes */
+  src: local('Quicksand'), local('Quicksand'),
+    url('./fonts/Quicksand-Bold.ttf') format('truetype');
 }
 
 * {
@@ -30,19 +30,19 @@
   margin: 0;
   box-sizing: border-box;
   transition: 0.3s;
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 body {
   margin: 0;
-  font-family: "Quicksand", "Roboto", "Helvetica Neue", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+  font-family: 'Quicksand', 'Roboto', 'Helvetica Neue', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  transition: "0.3s";
+  transition: '0.3s';
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
