--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@font-face {
+/* @font-face {
   font-family: 'Quicksand';
   font-style: normal;
-  font-weight: 300;
-  src: url('./fonts/Quicksand-Light.ttf'); /* IE9 Compat Modes */
+  font-weight: 200;
+  src: url('./fonts/Quicksand-Light.ttf');
   src: local('Quicksand'), local('Quicksand'),
     url('./fonts/Quicksand-Light.ttf') format('truetype');
 }
@@ -11,32 +11,33 @@
   font-family: 'Quicksand';
   font-style: normal;
   font-weight: 500;
-  src: url('./fonts/Quicksand-Regular.ttf'); /* IE9 Compat Modes */
+  src: url('./fonts/Quicksand-Regular.ttf');
   src: local('Quicksand'), local('Quicksand'),
     url('./fonts/Quicksand-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Quicksand';
-  font-style: normal;
+  font-style: bold;
   font-weight: 700;
-  src: url('./fonts/Quicksand-Bold.ttf'); /* IE9 Compat Modes */
+  src: url('./fonts/Quicksand-Bold.ttf');
   src: local('Quicksand'), local('Quicksand'),
     url('./fonts/Quicksand-Bold.ttf') format('truetype');
-}
+} */
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   transition: 0.3s;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto', 'Quicksand', sans-serif;
+  font-weight: 100;
 }
 
 body {
   margin: 0;
-  font-family: 'Quicksand', 'Roboto', 'Helvetica Neue', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', sans-serif;
+  /* font-family: 'Quicksand', 'Roboto', 'Helvetica Neue', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: '0.3s';
